--- a/referencias.bib
+++ b/referencias.bib
@@ -2,7 +2,7 @@
   author        = {Yuri Dumaresq Sobral},
   title         = {Notas de aula do curso de Introdução a Métodos Computacionais 
                     em Equações Diferenciais Diferenciais Ordinárias},
-  month         = {February},
+  month         = {Fevereiro},
   year          = {2023}
 }
 
